--- a/Terrain/Terrain.vcxproj.filters
+++ b/Terrain/Terrain.vcxproj.filters
@@ -132,6 +132,12 @@
     <ClInclude Include="Utils\StringHelper.h">
       <Filter>Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Scene\Light.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderCode\LandShader.h">
+      <Filter>Shaders\ShaderCode</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -209,6 +215,12 @@
     <ClCompile Include="Utils\StringHelper.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\Light.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="ShaderCode\LandShader.cpp">
+      <Filter>Shaders\ShaderCode</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Terrain.rc">
@@ -255,5 +267,11 @@
       <Filter>Shaders\ShaderSource</Filter>
     </None>
     <None Include="packages.config" />
+    <None Include="ShaderSource\terrain.vs">
+      <Filter>Shaders\ShaderSource</Filter>
+    </None>
+    <None Include="ShaderSource\terrain.ps">
+      <Filter>Shaders\ShaderSource</Filter>
+    </None>
   </ItemGroup>
 </Project>
