--- a/Terrain/Terrain.vcxproj
+++ b/Terrain/Terrain.vcxproj
@@ -158,7 +158,9 @@
     <ClInclude Include="Profilling\FpsCounter.h" />
     <ClInclude Include="Profilling\Timer.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Scene\Drawable\IModel.h" />
     <ClInclude Include="Scene\Drawable\Land.h" />
+    <ClInclude Include="Scene\Drawable\Mesh.h" />
     <ClInclude Include="Scene\Drawable\SkyDome.h" />
     <ClInclude Include="Scene\Light.h" />
     <ClInclude Include="Scene\World.h" />
@@ -191,6 +193,8 @@
     <ClCompile Include="Land.cpp" />
     <ClCompile Include="Profilling\FpsCounter.cpp" />
     <ClCompile Include="Profilling\Timer.cpp" />
+    <ClCompile Include="Scene\Drawable\IModel.cpp" />
+    <ClCompile Include="Scene\Drawable\Mesh.cpp" />
     <ClCompile Include="Scene\Drawable\SkyDome.cpp" />
     <ClCompile Include="Scene\Light.cpp" />
     <ClCompile Include="Scene\World.cpp" />
