--- a/Terrain/Terrain.vcxproj
+++ b/Terrain/Terrain.vcxproj
@@ -159,12 +159,15 @@
     <ClInclude Include="Profilling\FpsCounter.h" />
     <ClInclude Include="Profilling\Timer.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Scene\Drawable\Bitmap.h" />
     <ClInclude Include="Scene\Drawable\IModel.h" />
     <ClInclude Include="Scene\Drawable\Land.h" />
     <ClInclude Include="Scene\Drawable\Mesh.h" />
+    <ClInclude Include="Scene\Drawable\MiniMap.h" />
     <ClInclude Include="Scene\Drawable\SkyDome.h" />
     <ClInclude Include="Scene\Drawable\TerrainCell.h" />
     <ClInclude Include="Scene\Light.h" />
+    <ClInclude Include="Scene\SceneGraph.h" />
     <ClInclude Include="Scene\World.h" />
     <ClInclude Include="ShaderCode\ClipPlaneShader.h" />
     <ClInclude Include="ShaderCode\ColorShader.h" />
@@ -196,11 +199,14 @@
     <ClCompile Include="Method\Frustrum.cpp" />
     <ClCompile Include="Profilling\FpsCounter.cpp" />
     <ClCompile Include="Profilling\Timer.cpp" />
+    <ClCompile Include="Scene\Drawable\Bitmap.cpp" />
     <ClCompile Include="Scene\Drawable\IModel.cpp" />
     <ClCompile Include="Scene\Drawable\Mesh.cpp" />
+    <ClCompile Include="Scene\Drawable\MiniMap.cpp" />
     <ClCompile Include="Scene\Drawable\SkyDome.cpp" />
     <ClCompile Include="Scene\Drawable\TerrainCell.cpp" />
     <ClCompile Include="Scene\Light.cpp" />
+    <ClCompile Include="Scene\SceneGraph.cpp" />
     <ClCompile Include="Scene\World.cpp" />
     <ClCompile Include="ShaderCode\ClipPlaneShader.cpp" />
     <ClCompile Include="ShaderCode\ColorShader.cpp" />
